<resources>
    <string name="symptoms_q">Answer these questions</string>
    <string name="symptom_success">Symptom added Successfully.</string>
    <string name="breathing_difficulties">Have you feeling any breathing difficulties in past few weeks?</string>
    <string name="patient_history">Do you have any disease history or under treatment(diabetes,heart disease)?</string>
    <string name="smelling">Have you feel any smelling difficulty in past few weeks?</string>
    <string name="gender_label">You are</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tamil_button">தமிழ்</string>
    <string name="english">English</string>
    <string name="headache_label">Have you feeling any headache in past few weeks?</string>
    <string name="cough_label">Have you feeling dry cough in past few weeks?</string>
    <string name="sorethroat_label">Have you feeling sore throat in past few weeks?</string>
    <string name="fever_label">Have you feeling fever in past few weeks?</string>
    <string name="updatedIn">These data updated on</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="under_observation">Under observation</string>
    <string name="recovered">Recovered</string>
    <string name="deathes">Deathes</string>
    <string name="traveling_Method">Traveled Method</string>
    <string name="traveling_q">Please choose you used traveled method in last few weeks.</string>
    <string name="public_label">Public</string>
    <string name="public_traveling_method">Please choose your public traveling method in last few weeks.</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="private_label">Private</string>
    <string name="loading">Please Wait!</string>
    <string name="error_db">Error occurred while reading database.</string>
    <string name="error_email">Error sending verification email.Please try again later. </string>
    <string name="infect">(Please Seek Medical Advices)</string>
    <string name="possible">(Please stay at home.)</string>
    <string name="location_select">Please select the location.</string>
    <string name="fill_all">All fileds should be filled.</string>
    <string name="password_8">Password should be atleast 8 characters long.</string>
    <string name="menu_home">Home</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_family">My Family</string>
    <string name="menu_symptom">My Symptom</string>
    <string name="menu_event">My Events</string>
    <string name="menu_signout">SignOut</string>
    <string name="menu_stat">Statistics</string>
    <string name="language_menu">Language</string>
    <string name="app_name">digitalCovid19</string>
    <string name="add_location_activity_menu_item_title">Item</string>
    <string name="symptom_activity_menu_item_title">Item</string>
    <string name="symptom_activity_yes_button_hint">Yes</string>
    <string name="symptom_activity_are_you_been_abroad_text_view_text">Are you\n been abroad\nin last few\nweeks?</string>
    <string name="symptom_activity_no_button_hint">No</string>
    <string name="symptom_activity_no_button_text">No</string>
    <string name="symptom_activity_are_you_been_abroad_text_view_hint">Are you\n been abroad\nin last few\nweeks?</string>
    <string name="symptom_activity_yes_button_text">Yes</string>
    <string name="symptoms_second_activity_cough_text_view_text">Cough</string>
    <string name="symptoms_second_activity_addsymptoms_button_hint">Add symptoms</string>
    <string name="symptoms_second_activity_addsymptoms_button_text">Add symptoms</string>
    <string name="symptoms_second_activity_breathing_difficulti_text_view_text">Breathing difficulties</string>
    <string name="symptoms_second_activity_fever_text_view_hint">Fever</string>
    <string name="symptoms_second_activity_sore_throat_text_view_hint">Sore throat</string>
    <string name="symptoms_second_activity_my_symptoms_text_view_hint">My symptoms</string>
    <string name="symptoms_second_activity_my_symptoms_text_view_text">My symptoms</string>
    <string name="symptoms_second_activity_breathing_difficulti_text_view_hint">Breathing difficulties</string>
    <string name="symptoms_second_activity_sore_throat_text_view_text">Sore throat</string>
    <string name="symptoms_second_activity_headache_text_view_text">Headache</string>
    <string name="symptoms_second_activity_cough_text_view_hint">Cough</string>
    <string name="symptoms_second_activity_fever_text_view_text">Fever</string>
    <string name="symptoms_second_activity_headache_text_view_hint">Headache</string>
    <string name="add_event_modal_activity_location_edit_text_hint">Choose Location</string>
    <string name="add_event_modal_activity_login_two_button_text">Pick a date</string>
    <string name="add_event_modal_activity_eventname_edit_text_hint">Live in Concert</string>
    <string name="add_event_modal_activity_date_text_view_text">Date</string>
    <string name="add_event_modal_activity_login_button_text">Add event</string>
    <string name="add_event_modal_activity_attending_an_event_text_view_hint">Attending an event</string>
    <string name="add_event_modal_activity_location_text_view_text">Location</string>
    <string name="add_event_modal_activity_location_text_view_hint">Location</string>
    <string name="add_event_modal_activity_login_button_hint">Add event</string>
    <string name="add_event_modal_activity_attending_an_event_text_view_text">Attending an event</string>
    <string name="add_event_modal_activity_event_name_text_view_text">Event Name</string>
    <string name="add_event_modal_activity_event_name_text_view_hint">Event Name</string>
    <string name="add_event_modal_activity_date_text_view_hint">Date</string>
    <string name="add_event_modal_activity_login_two_button_hint">Pick a date</string>
    <string name="welcome_activity_digital_covid19_text_view_text">Digital COVID-19</string>
    <string name="welcome_activity_digital_covid19_text_view_hint">Digital COVID-19</string>
    <string name="welcome_activity_keeping_you_safer_text_view_text">Keeping You Safer</string>
    <string name="welcome_activity_login_button_text">Login</string>
    <string name="welcome_activity_register_button_text">Register</string>
    <string name="welcome_activity_keeping_you_safer_text_view_hint">Keeping You Safer</string>
    <string name="welcome_activity_register_button_hint">Register</string>
    <string name="welcome_activity_login_button_hint">Login</string>
    <string name="add_transport_modal_activity_my_transports_text_view_hint">My transports</string>
    <string name="add_transport_modal_activity_busnumber_edit_text_hint">if you have</string>
    <string name="add_transport_modal_activity_bus_number_text_view_text">Bus number</string>
    <string name="add_transport_modal_activity_route_text_view_text">Route</string>
    <string name="add_transport_modal_activity_addtransport_button_text">Add transport</string>
    <string name="add_transport_modal_activity_route_edit_text_hint">route number</string>
    <string name="add_transport_modal_activity_date_button_text">pick a date</string>
    <string name="add_transport_modal_activity_date_text_view_text">Date</string>
    <string name="add_transport_modal_activity_date_button_hint">pick a date</string>
    <string name="add_transport_modal_activity_bus_number_text_view_hint">Bus number</string>
    <string name="add_transport_modal_activity_date_text_view_hint">Date</string>
    <string name="add_transport_modal_activity_route_text_view_hint">Route</string>
    <string name="add_transport_modal_activity_my_transports_text_view_text">My transports</string>
    <string name="add_transport_modal_activity_addtransport_button_hint">Add transport</string>
    <string name="home_activity_john_smith_text_view_hint">John Smith</string>
    <string name="home_activity_safe_text_view_text">(YOU ARE SAFE)</string>
    <string name="home_activity_safe_text_view_hint">Safe</string>
    <string name="home_activity_john_smith_text_view_text">John Smith</string>
    <string name="activity_model_activity_transport_button_text">Transport</string>
    <string name="activity_model_activity_transport_button_hint">Transport</string>
    <string name="activity_model_activity_my_transports_text_view_hint">Activities</string>
    <string name="activity_model_activity_transport_button_sheet_item_2_text">Private</string>
    <string name="activity_model_activity_my_transports_text_view_text">Connections</string>
    <string name="activity_model_activity_transport_button_sheet_title">Transport Type</string>
    <string name="activity_model_activity_location_button_hint">Location</string>
    <string name="activity_model_activity_event_button_hint">Event</string>
    <string name="activity_model_activity_event_button_text">Event</string>
    <string name="activity_model_activity_transport_button_sheet_item_1_text">Public</string>
    <string name="activity_model_activity_location_button_text">Location</string>
    <string name="register_activity_name_edit_text_hint">John Smith</string>
    <string name="register_activity_nic_number_text_view_hint">NIC number</string>
    <string name="register_activity_name_text_view_hint">Name</string>
    <string name="register_activity_password_edit_text_hint">Enter Your Password</string>
    <string name="register_activity_register_button_text">Continue</string>
    <string name="register_activity_please_let_us_know_ytext_view_text">Please let us know you</string>
    <string name="register_activity_mobile_edit_text_hint">Please enter your mobile number</string>
    <string name="register_activity_nic_number_text_view_text">NIC number</string>
    <string name="register_activity_password_text_view_text">Password</string>
    <string name="register_activity_email_text_view_hint">Email</string>
    <string name="register_activity_please_let_us_know_ytext_view_hint">Please let us know you</string>
    <string name="register_activity_email_text_view_text">Email</string>
    <string name="register_activity_name_text_view_text">Name</string>
    <string name="register_activity_password_text_view_hint">Password</string>
    <string name="register_activity_email_edit_text_hint">Enter yout email address</string>
    <string name="register_activity_nic_edit_text_hint">961234567v</string>
    <string name="register_activity_mobile_text_view_hint">Mobile</string>
    <string name="register_activity_mobile_text_view_text">Mobile</string>
    <string name="register_activity_register_button_hint">Continue</string>
    <string name="add_location_activity_my_transports_text_view_text">Add Location</string>
    <string name="add_location_activity_login_button_text">Add Location</string>
    <string name="add_location_activity_bus_number_text_view_hint">Where?</string>
    <string name="add_location_activity_location_edit_text_hint">Choose Location</string>
    <string name="add_location_activity_datepicklocation_button_text">Pick a date</string>
    <string name="add_location_activity_login_button_hint">Add Location</string>
    <string name="add_location_activity_route_text_view_hint">When?</string>
    <string name="add_location_activity_bus_number_text_view_text">Where?</string>
    <string name="add_location_activity_route_text_view_text">When?</string>
    <string name="add_location_activity_datepicklocation_button_hint">Pick a date</string>
    <string name="add_location_activity_my_transports_text_view_hint">Add Location</string>
    <string name="sign_in_activity_login_button_text">Login</string>
    <string name="sign_in_activity_forgot_password_text_view_hint">Forgot Password?</string>
    <string name="sign_in_activity_login_button_hint">Login</string>
    <string name="sign_in_activity_register_button_text">Register</string>
</resources>