<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraint_layout_constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/register_activity_constraint_layout_constraint_layout_background_color">

		<ScrollView
			android:id="@+id/scroll_scroll_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"

			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			>

			<LinearLayout
				android:id="@+id/scroll_scroll_view_content"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal">

				<TextView
					android:id="@+id/please_let_us_know_ytext_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/font_nunito_regular"
					android:gravity="center_horizontal"
					android:text="@string/register_activity_please_let_us_know_ytext_view_text"
					android:textColor="@color/register_activity_please_let_us_know_ytext_view_text_color"
					android:textSize="@dimen/register_activity_please_let_us_know_ytext_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="53dp"
					tools:layout_editor_absoluteY="0dp"/>

				<TextView
					android:id="@+id/name_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/register_activity_name_text_view_margin_start"
					android:layout_marginTop="@dimen/register_activity_name_text_view_margin_top"
					android:gravity="start"
					android:text="@string/register_activity_name_text_view_text"
					android:textColor="@color/register_activity_name_text_view_text_color"
					android:textSize="@dimen/register_activity_name_text_view_text_size"

					tools:layout_editor_absoluteX="27dp"
					tools:layout_editor_absoluteY="50dp"/>

				<EditText
					android:id="@+id/name_edit_text"
					android:layout_width="@dimen/register_activity_name_edit_text_width"
					android:layout_height="@dimen/register_activity_name_edit_text_height"
					android:layout_marginTop="@dimen/register_activity_name_edit_text_margin_top"
					android:background="@drawable/register_activity_name_edit_text_background"
					android:fontFamily="@font/font_nunito_regular"
					android:hint="Enter your name"
					android:inputType="text"
					android:maxLines="1"
					android:textColor="#000000"
					android:textColorHint="@color/color_hint_text"
					android:textSize="@dimen/register_activity_name_edit_text_text_size"

					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="73dp" />

				<TextView
					android:id="@+id/nic_number_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/register_activity_nic_number_text_view_margin_start"
					android:layout_marginTop="@dimen/register_activity_nic_number_text_view_margin_top"
					android:gravity="start"
					android:text="@string/register_activity_nic_number_text_view_text"
					android:textColor="@color/register_activity_nic_number_text_view_text_color"
					android:textSize="@dimen/register_activity_nic_number_text_view_text_size"

					tools:layout_editor_absoluteX="27dp"
					tools:layout_editor_absoluteY="146dp"/>

				<EditText
					android:id="@+id/nic_edit_text"
					android:layout_width="@dimen/register_activity_nic_edit_text_width"
					android:layout_height="@dimen/register_activity_nic_edit_text_height"
					android:layout_marginTop="@dimen/register_activity_nic_edit_text_margin_top"
					android:background="@drawable/register_activity_nic_edit_text_background"
					android:fontFamily="@font/font_nunito_regular"

					android:hint="Enter your nic number"
					android:inputType="text"
					android:maxLines="1"
					android:textColor="#000000"
					android:textColorHint="@color/color_hint_text"
					android:textSize="@dimen/register_activity_nic_edit_text_text_size"

					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="169dp" />

				<TextView
					android:id="@+id/email_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/register_activity_email_text_view_margin_start"
					android:layout_marginTop="@dimen/register_activity_email_text_view_margin_top"
					android:gravity="start"
					android:text="@string/register_activity_email_text_view_text"
					android:textColor="@color/register_activity_email_text_view_text_color"
					android:textSize="@dimen/register_activity_email_text_view_text_size"

					tools:layout_editor_absoluteX="27dp"
					tools:layout_editor_absoluteY="242dp"/>

				<EditText
					android:id="@+id/email_edit_text"
					android:layout_width="@dimen/register_activity_email_edit_text_width"
					android:layout_height="@dimen/register_activity_email_edit_text_height"
					android:layout_marginTop="@dimen/register_activity_email_edit_text_margin_top"
					android:background="@drawable/register_activity_email_edit_text_background"
					android:fontFamily="@font/font_nunito_regular"

					android:hint="@string/register_activity_email_edit_text_hint"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:textColor="#000000"
					android:textColorHint="@color/color_hint_text"
					android:textSize="@dimen/register_activity_email_edit_text_text_size"

					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="265dp" />

				<TextView
					android:id="@+id/mobile_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/register_activity_mobile_text_view_margin_start"
					android:layout_marginTop="@dimen/register_activity_mobile_text_view_margin_top"
					android:gravity="start"
					android:text="@string/register_activity_mobile_text_view_text"
					android:textColor="@color/register_activity_mobile_text_view_text_color"
					android:textSize="@dimen/register_activity_mobile_text_view_text_size"

					tools:layout_editor_absoluteX="27dp"
					tools:layout_editor_absoluteY="338dp"/>

				<EditText
					android:id="@+id/mobile_edit_text"
					android:layout_width="@dimen/register_activity_mobile_edit_text_width"
					android:layout_height="@dimen/register_activity_mobile_edit_text_height"
					android:layout_marginTop="@dimen/register_activity_mobile_edit_text_margin_top"
					android:background="@drawable/register_activity_mobile_edit_text_background"
					android:fontFamily="@font/font_nunito_regular"

					android:hint="@string/register_activity_mobile_edit_text_hint"
					android:inputType="text"
					android:maxLines="1"
					android:textColor="#000000"
					android:textColorHint="@color/color_hint_text"
					android:textSize="@dimen/register_activity_mobile_edit_text_text_size"

					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="361dp" />

				<TextView
					android:id="@+id/password_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/register_activity_password_text_view_margin_start"
					android:layout_marginTop="@dimen/register_activity_password_text_view_margin_top"
					android:gravity="start"
					android:text="@string/register_activity_password_text_view_text"
					android:textColor="@color/register_activity_password_text_view_text_color"

					tools:layout_editor_absoluteX="27dp"
					tools:layout_editor_absoluteY="434dp"/>

				<EditText
					android:id="@+id/password_edit_text"
					android:layout_width="@dimen/register_activity_password_edit_text_width"
					android:layout_height="@dimen/register_activity_password_edit_text_height"
					android:layout_marginBottom="@dimen/register_activity_password_edit_text_margin_bottom"
					android:background="@drawable/register_activity_password_edit_text_background"
					android:fontFamily="@font/font_arialmt"

					android:hint="@string/register_activity_password_edit_text_hint"
					android:inputType="textPassword"
					android:maxLines="1"
					android:textColor="#000000"
					android:textColorHint="@color/color_hint_text"
					android:textSize="@dimen/register_activity_password_edit_text_text_size"

					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="457dp"/>

				<View
					android:id="@+id/divider_constraint_layout"
					android:layout_width="@dimen/register_activity_divider_constraint_layout_width"
					android:layout_height="@dimen/register_activity_divider_constraint_layout_height"
					android:layout_marginTop="@dimen/register_activity_divider_constraint_layout_margin_top"
					android:background="@color/register_activity_divider_constraint_layout_background_color"
					android:layout_gravity="center_horizontal"
					tools:layout_editor_absoluteX="135dp"
					tools:layout_editor_absoluteY="38dp"/>

				<View
					android:id="@+id/divider_two_constraint_layout"
					android:layout_width="@dimen/register_activity_divider_two_constraint_layout_width"
					android:layout_height="@dimen/register_activity_divider_two_constraint_layout_height"
					android:layout_marginBottom="@dimen/register_activity_divider_two_constraint_layout_margin_bottom"
					android:background="@color/register_activity_divider_two_constraint_layout_background_color"
					android:layout_gravity="center_horizontal"
					tools:layout_editor_absoluteX="135dp"
					tools:layout_editor_absoluteY="523dp"/>

				<Button
					android:id="@+id/register_button"
					android:layout_width="@dimen/register_activity_register_button_width"
					android:layout_height="@dimen/register_activity_register_button_height"
					android:background="@drawable/register_activity_register_button_ripple"
					android:fontFamily="@font/font_nunito_regular"
					android:gravity="center"
					android:text="@string/register_activity_register_button_text"
					android:textColor="#FFFFFF"
					android:textSize="@dimen/register_activity_register_button_text_size"
					android:layout_marginBottom="10dp"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="545dp"/>
			</LinearLayout>
		</ScrollView>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>