<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraint_layout_constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#4FAB5E">
		<ImageView
			android:id="@+id/dicov2_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="100dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="40dp"
			android:contentDescription="TODO"
			android:scaleType="centerCrop"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:src="@mipmap/ic_launcher_foreground" />
		<LinearLayout
			android:id="@+id/group1_constraint_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"

			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/dicov2_image_view"
			android:layout_gravity="center_horizontal"
		>

			<TextView
				android:id="@+id/digital_covid19_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/welcome_activity_digital_covid19_text_view_text"
				android:textColor="#FFFFFF"
				android:textSize="@dimen/welcome_activity_digital_covid19_text_view_text_size"

				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp"/>

			<TextView
				android:id="@+id/keeping_you_safer_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/welcome_activity_keeping_you_safer_text_view_margin_start"
				android:gravity="center"
				android:text="@string/welcome_activity_keeping_you_safer_text_view_text"
				android:textColor="#FFFFFF"
				android:textSize="@dimen/welcome_activity_keeping_you_safer_text_view_text_size"
				/>
		</LinearLayout>


		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/componentsection_constraint_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/group1_constraint_layout"
			>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/buttonsection_constraint_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
				>
			
				<Button
					android:id="@+id/register_button"
					android:layout_width="@dimen/sign_in_activity_register_button_width"
					android:layout_height="@dimen/sign_in_activity_register_button_height"
					android:layout_marginStart="@dimen/sign_in_activity_register_button_margin_start"
					android:background="@drawable/sign_in_activity_register_button_ripple"
					android:fontFamily="@font/font_nunito_regular"
					android:gravity="center"
					android:text="@string/sign_in_activity_register_button_text"
					android:textColor="#FFFFFF"

					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="154dp"
					tools:layout_editor_absoluteY="0dp"/>
			
				<Button
					android:id="@+id/login_button"
					android:layout_width="@dimen/sign_in_activity_login_button_width"
					android:layout_height="@dimen/sign_in_activity_login_button_height"
					android:background="@drawable/sign_in_activity_login_button_ripple"
					android:fontFamily="@font/font_nunito_regular"
					android:gravity="center"
					android:text="@string/sign_in_activity_login_button_text"
					android:textColor="@color/sign_in_activity_login_button_text_color"

					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="0dp"/>
			</androidx.constraintlayout.widget.ConstraintLayout>


			<EditText
				android:id="@+id/email_edit_text"
				android:layout_width="@dimen/sign_in_activity_email_edit_text_width"
				android:layout_height="@dimen/sign_in_activity_email_edit_text_height"
				android:background="@drawable/sign_in_activity_email_edit_text_background"
				android:fontFamily="@font/font_nunito_regular"

				android:hint="@string/register_activity_mobile_edit_text_hint"
				android:inputType="number"
				android:maxLines="1"
				android:textColor="#FFFFFF"
				android:textColorHint="@color/color_hint_text"
				android:textSize="@dimen/sign_in_activity_email_edit_text_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="3dp"
				tools:layout_editor_absoluteY="0dp"/>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>