<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraint_layout_constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/welcome_activity_constraint_layout_constraint_layout_background_color">

		<LinearLayout
			android:id="@+id/component81_constraint_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"

			android:background="#4FAB5E"
			android:orientation="vertical"
			android:layout_gravity="center">

			<ImageView
				android:id="@+id/dicov2_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="100dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="40dp"
				android:contentDescription="TODO"
				android:scaleType="centerCrop"
				android:src="@mipmap/ic_launcher_foreground" />
			<LinearLayout
				android:id="@+id/group1_constraint_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_marginBottom="20dp"
				android:layout_gravity="center_horizontal"
				tools:layout_editor_absoluteX="82dp"
				tools:layout_editor_absoluteY="299dp">

				<TextView
					android:id="@+id/digital_covid19_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/welcome_activity_digital_covid19_text_view_text"
					android:textColor="#FFFFFF"
					android:textSize="@dimen/welcome_activity_digital_covid19_text_view_text_size"
					app:layout_constraintHorizontal_weight="1"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="0dp"/>

				<TextView
					android:id="@+id/keeping_you_safer_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/welcome_activity_keeping_you_safer_text_view_margin_start"
					android:gravity="center"
					android:text="@string/welcome_activity_keeping_you_safer_text_view_text"
					android:textColor="#FFFFFF"
					android:textSize="@dimen/welcome_activity_keeping_you_safer_text_view_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"
					tools:layout_editor_absoluteX="17dp"
					tools:layout_editor_absoluteY="29dp"/>
			</LinearLayout>

			<Button
				android:id="@+id/register_button"
				android:layout_width="@dimen/welcome_activity_register_button_width"
				android:layout_height="@dimen/welcome_activity_register_button_height"
				android:layout_marginTop="10dp"
				android:background="@drawable/welcome_activity_register_button_ripple"
				android:fontFamily="@font/font_nunito_regular"
				android:gravity="center"
				android:layout_gravity="center_horizontal"
				android:text="@string/welcome_activity_register_button_text"
				android:textColor="@color/welcome_activity_register_button_text_color_selector"
				android:textSize="@dimen/welcome_activity_register_button_text_size"
			/>

			<Button
				android:id="@+id/login_button"
				android:layout_width="@dimen/welcome_activity_login_button_width"
				android:layout_height="@dimen/welcome_activity_login_button_height"
				android:layout_marginTop="10dp"
				android:layout_gravity="center_horizontal"
				android:background="@drawable/welcome_activity_login_button_ripple"
				android:fontFamily="@font/font_nunito_regular"
				android:gravity="center"
				android:text="@string/welcome_activity_login_button_text"
				android:textColor="#FFFFFF"
				android:textSize="@dimen/welcome_activity_login_button_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="62dp"
				tools:layout_editor_absoluteY="454dp"/>

		</LinearLayout>


	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>